--- a/index.html
+++ b/index.html
@@ -17,11 +17,11 @@
              </section>
         
         <div id="intro">
-            <h1>Title</h1>
+            <h1>BootCamp Coding Quiz Challenge</h1>
             <p>
-                Description
+                Try to answer the following code-related questions within the time limit. Keep in mind that incorrect answers will penalize your score/time by ten seconds!
             </p>
-            <button id="start-button"> Start Quiz</button>
+            <button id="start-button">Start Quiz</button>
         </div>
         </div>
         <main id="quiz" class="hide">
