--- a/highscore.html
+++ b/highscore.html
@@ -4,18 +4,20 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
     <title>High Scores!</title>
 </head>
 <body>
-    <h1>
+    <h1 class="text-primary text-center">
         Saved High Scores!
     </h1>
-    <p>
+    <p class="text-center">
         Recent Highscores:
-        <ul id="placement">
-
-        </ul>
     </p>
+    <ul id="placement" class="text-center">
+
+    </ul>
     <script src="assets/js/script-highscore.js"> </script>
 </body>
 </html>
