--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 
     </div>
     <footer>
-
+        Thanks for visiting!
     </footer>
     <script src="assets/js/script-copy.js"></script>
 </body>
