added styling to highscore page.

--- a/highscore.html
+++ b/highscore.html
@@ -15,7 +15,7 @@
     <p class="text-center">
         Recent Highscores:
     </p>
-    <ul id="placement" class="text-center">
+    <ul id="placement" class="text-center list-group">
 
     </ul>
     <script src="assets/js/script-highscore.js"> </script>
