added back button from highscores screen and added styling to footer/header.

--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
 
 <body>
     <div>
-        <section class="border-bottom">
-            <h2 class="text-end">
+        <section class="border-bottom bg-light">
+            <h2 class="text-end m-2">
                 <a href="./highscore.html" class="text-decoration-none text-info">High Scores</a>
             </h2>
         </section>
@@ -47,10 +47,7 @@
             <section id="answer"></section>
         </div>
     </main>
-    <div id="end">
-
-    </div>
-    <footer>
+    <footer class="bg-light border mt-2 text-center">
         Thanks for visiting!
     </footer>
     <script src="assets/js/script-copy.js"></script>
